reduced legal stuff to the one important sentence

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -255,7 +255,7 @@ From installing and using the selectorgadget as shown in the video above, we get
 
 **BEFORE** scraping data from the web, you should always check whether or not you are **ALLOWED** to scrape it! There are two documents that are important for this: the robots.txt file and reading the website's Terms of Service document. The website's Terms of Service document is probably the more important of the two, and so you should look there first. What happens when we look at Craigslist's Terms of Service document? Well we read this:
 
-> *"You agree not to copy/collect CL content via robots, spiders, scripts, scrapers, crawlers, or any automated or manual equivalent (e.g., by hand). Misleading, unsolicited, and/or unlawful postings/communications/accounts are prohibited, as is buying or selling accounts."*
+> *"You agree not to copy/collect CL content via robots, spiders, scripts, scrapers, crawlers, or any automated or manual equivalent (e.g., by hand)."*
 >
 > source: https://www.craigslist.org/about/terms.of.use
 
