chapter 3 reading done

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -56,6 +56,10 @@ As mentioned earlier, data frames are really specialized lists of vectors that a
 
 ![](img/dataframe.jpeg)
 
+## The `dplyr` functions
+
+We haven't explicitly said this yet, but the `tidyverse` is actually a meta R package that installs a collection of R packages that all follow the tidy data philosophy (more on this below). One of the tidyverse packages is `dplyr` - a data wrangling workhorse. You have already met 3 of the dplyr function (`select`, `filter` and `mutate`). To learn more about those three and meet a few more useful ones, read the post at this link: http://stat545.com/block010_dplyr-end-single-table.html#where-were-we
+
 ## Tidy Data
 
 There are many ways a spreadsheet-like dataset can be organized. In this chapter we are going to focus on the tidy data format of organization, and how to make your messy data tidy. This is because a variety of tools we would like to be able to use in R are designed to work most effectively (and efficiently) with tidy data. 
