added additional reading recommendations

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -30,7 +30,7 @@ Let's first start by defining exactly what a data frame is. From a data perspect
 
 ![](img/obs.jpeg)
 
-And the columns are the variables. Unlike Python's data frames that require the pandas package, data frames are built-in, base R objects.
+And the columns are the variables. Data frames in R are built-in, base R objects.
 
 ![](img/vars.jpeg)
 
@@ -72,15 +72,12 @@ A tidy data is one that is satified by these three criteria:
 - each variable is a single column, and
 - each value is a single cell (i.e., its row, column position in the data frame is not shared with another value)
 
+![](https://d33wubrfki0l68.cloudfront.net/6f1ddb544fc5c69a2478e444ab8112fb0eea23f8/91adc/images/tidy-1.png)
+*image source: [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham*
+
 ### Why is tidy data important in R?
 
-First, many tidyverse data cleaning/wrangling tools work best with tidy data.
-
-Second, in contrast to Matplotlib in Python, the ggplot functions expect data in tidy format. A move towards this philosophy is also happening in Python in the altair package.
-
-Third most statistical analysis functions expect data in tidy format. In contrast to Python, in R you do not need to manually create dummy variables to represent your categorical data for its statistical or machine learning tools. R does this for you under the hood through factorization.
-
-Given that all of these tasks are central features to virtually any data analysis project it is well worth spending the time to get your data into a tidy format up front. Now let's explore how we can do this in R.
+First, many tidyverse data cleaning/wrangling tools work best with tidy data. Second, one of the most popular plotting tools in R, the `ggplot2` functions, expect data in tidy format. Third most statistical analysis functions expect data in tidy format. In contrast to Python and other programming languages, in R you do not need to manually create dummy variables to represent your categorical data for its statistical or machine learning tools. R does this for you under the hood through factorization, but your datamust be tidy for this to work. Given that all of these tasks are central features to virtually any data analysis project it is well worth spending the time to get your data into a tidy format up front. Now let's explore how we can do this in R.
 
 ### Going from wide to long (or tidy!) using `gather`
 
@@ -252,3 +249,7 @@ gather(hist_vote_messy,
 19          1984 runnerup Walter Mondale  Dem  
 20          1980 runnerup Jimmy Carter    Dem  
 ```
+
+## Additional readings/resources
+- [Data transformation chapter](https://r4ds.had.co.nz/transform.html) from [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham
+- [Tidy data chapter](https://r4ds.had.co.nz/tidy-data.html) from [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham
