added link to Hadley

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -19,4 +19,4 @@ Expand your data visualization knowledge and tool set beyond what we have seen a
 
 ## `ggplot2` for data visualization in R
 
-The creator of `ggplot2` has written a wonderful chapter on how to use this library to create visualizations in R, so we suggest you read that for this week's pre-reading: [Data visualisation chapter](https://r4ds.had.co.nz/data-visualisation.html) from [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham
+The creator of `ggplot2`, [Hadley Wickham](http://hadley.nz/), has written a wonderful chapter on how to use this library to create visualizations in R, so we suggest you read that for this week's pre-reading: [Data visualisation chapter](https://r4ds.had.co.nz/data-visualisation.html) from [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham
