added note on generality of the map functions

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -315,6 +315,10 @@ You can see that's quite a bit of extra typing... So the creators of `purrr` hav
 map_df(mtcars, ~ max(., na.rm  = TRUE))
 ```
 
+### A bit more about the `map*` functions
+
+The `map` functions are generally quite useful for solving many iteration/repetition problems. It's use does not have to be limited to columns of a data frame. It can be used to apply functions to elements of a vector or list, rows of a data frame (using `pmap`), and even to lists of data frames, or nested data frames.
+
 ## Additional readings/resources
 - [Data transformation chapter](https://r4ds.had.co.nz/transform.html) from [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham
 - [Tidy data chapter](https://r4ds.had.co.nz/tidy-data.html) from [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham
