added some info on effective visualizations

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -1,7 +1,7 @@
 # Effective data visualization {#viz}
 
 ## Overview 
-Expand your data visualization knowledge and tool set beyond what we have seen and practiced so far. We will move beyond scatter plots and learn other effective ways to visualize data, as well as some general rules of thumb to follow when creating visualations. All visualization tasks this week will be applied to real world data sets.
+Expand your data visualization knowledge and tool set beyond what we have seen and practiced so far. We will move beyond scatter plots and learn other effective ways to visualize data, as well as some general rules of thumb to follow when creating visualizations. All visualization tasks this week will be applied to real world data sets.
 
 ## Chapter learning objectives
 * Define the three key aspects of ggplot objects:
@@ -19,4 +19,22 @@ Expand your data visualization knowledge and tool set beyond what we have seen a
 
 ## `ggplot2` for data visualization in R
 
+(or alternate title, "how" to use R and `ggplot2` to make plots)
+
 The creator of `ggplot2`, [Hadley Wickham](http://hadley.nz/), has written a wonderful chapter on how to use this library to create visualizations in R, so we suggest you read that for this week's pre-reading: [Data visualisation chapter](https://r4ds.had.co.nz/data-visualisation.html) from [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham
+
+## Making effective vizualizations
+
+Just being able to make vizualizations in R with `ggplot2` (or any other tool for that matter) doesn't mean that your vizualization is effective at communicating to others what you are trying to communicate. There is a large body of research behind what makes effective visualizations and it seems it is really dependent on what humans can see and process. Claus Wilke, a Professor of Integrative Biology at The University of Texas at Austin, has written down some (digestible) guiding principles for making effectice visualizations based on this literature in his new book, [Fundamentals of Data Visualization](https://serialmentor.com/dataviz/). Below we give a high level listing of these, but we strongly recommend you read and/or refer [Part II: Principles of figure design](https://serialmentor.com/dataviz/proportional-ink.html) when creating your visualizations in this class (or any other time you are doing this task!).
+
+### Some guiding principles for making effectice visualizations
+
+1. Only make the plot area (where the dots, lines, bars are) as big as needed (simple plots can, and should be quite small)
+2. Don't adjust the axes to zoom in on small differences (if the difference is small, show that its small!)
+3. Show the data (don't hide the shape/distribution of the data behind a bar)
+4. Be wary of overplotting (if your plot has too many dots or lines and it starts to look like a mess, then you need to do something different)
+5. Use colors sparingly (too many different colors can distract and even create false patterns)
+6. Use legends and labels so that your visualization is understandable without reading the surrounding text
+7. Ensure the text on your visualization is big enough to be easily read
+8. Do not use pie charts (its harder for us to compare the sizes of the slices of a pie, than it is to compare sizes of bars).
+9. Do not use 3D (we don't see in 3D, not even as we're walking around in space)
